[package]
name = "chouten_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["macros", "time", "sync", "rt-multi-thread", "fs", "process"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
notify = "6"
toml = "0.9.11"
local-ip-address = "0.6.10"
